updated about page

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 
 
-<title>About</title>
+<title>About Rachel L.</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -300,12 +300,38 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About</h1>
+<h1 class="title toc-ignore">About Rachel L.</h1>
 
 </div>
 
 
-<p>I am Rachel Lee</p>
+<div id="education" class="section level2">
+<h2>Education</h2>
+<div id="mailman-school-of-public-health-at-columbia-university-new-york-ny" class="section level3">
+<h3>Mailman School of Public Health at Columbia University, New York, NY</h3>
+<p>Master of Public Health, Biostatistics with a certificate in Advanced Epidemiology | May 2020 (Expected)</p>
+</div>
+</div>
+<div id="professional-experience" class="section level2">
+<h2>Professional Experience</h2>
+<div id="ge-healthcare-seoul-south-korea" class="section level3">
+<h3>GE Healthcare, Seoul, South Korea</h3>
+<p>MRI Research Associate | Jul 2015 – Jan 2016</p>
+<p>o Conducted (2) quantitative brain MRI projects at (2) hospitals and performed data collection, management, and analysis</p>
+<p>o Composed full reports for senior scientists and radiologists</p>
+<p>o Authored (4) educational materials on introductory MRI physics for employee trainings</p>
+<p>o Supported clients with image post-processing and data management workflow at (3) hospitals</p>
+</div>
+</div>
+<div id="research-experience" class="section level2">
+<h2>Research Experience</h2>
+<div id="brown-university-providence-ri" class="section level3">
+<h3>Brown University, Providence, RI</h3>
+<p>Student Researcher | Jan 2016 – May 2017</p>
+<p>Thesis: Extracting Short – Fragmented DNA from Human Blood Serum Samples Using a Novel Microfluidic Chip Device</p>
+<p>o Developed a DNA purification protocol using microfluidics and magnetic separation technique</p>
+</div>
+</div>
 
 
 
