Included a link for linked in page

--- a/index.html
+++ b/index.html
@@ -379,9 +379,8 @@ div.tocify {
 </div>
 
 
-<div id="rachel" class="section level1">
-<h1>rachel</h1>
-</div>
+<p>#Introduction</p>
+<p>Name: Rachel L. Email: <a href="mailto:gl2458@cumc.columbia.edu" class="email">gl2458@cumc.columbia.edu</a> Summary: Biostatistics MPH candidate at Mailman School of Public Health. Interests include data science, statistical inference and analysis. <a href="https://www.linkedin.com/in/rgyl12/">Linkedin</a></p>
 
 
 
