--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="plotly.html">Data</a>
+  <a href="flexdashboard.html">Data</a>
 </li>
 <li>
   <a href="mailto:&lt;gl2458@cumc.columbia.edu&gt;">
