--- a/index.html
+++ b/index.html
@@ -382,8 +382,10 @@ div.tocify {
 </div>
 
 
-<p>#Introduction</p>
+<div id="introduction" class="section level1">
+<h1>Introduction</h1>
 <p>Name: Rachel Lee Email: <a href="mailto:gl2458@cumc.columbia.edu" class="email">gl2458@cumc.columbia.edu</a> Summary: Biostatistics MPH candidate at Mailman School of Public Health. Interests include data science, statistical inference and analysis. <a href="https://www.linkedin.com/in/rgyl12/">Linkedin</a></p>
+</div>
 
 
 
